--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/ananke"]
 	path = themes/ananke
 	url = https://github.com/budparr/gohugo-theme-ananke.git
+[submodule "themes/pickles"]
+	path = themes/pickles
+	url = https://github.com/izewfktvy533zjmn/hugo_theme_pickles.git
