--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ copyright = "<em>&copy; 2020 on-going.</em>"
 custom_css = "/static/css/custom.css"
 
 # Google Analytics API key.
-#googleAnalytics = "Your Google Analytics tracking id"
+googleAnalytics = "UA-166112919-2"
 
 
 
