--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseURL = "http://blog.on-going.jp/"
 languageCode = "jp"
 title = "on-going's Blog"
+hasCJKLanguage = true
 
 # Copyright notice. This is displayer in the footer.
 copyright = "<em>&copy; 2020 on-going.</em>"
